--- a/index.html
+++ b/index.html
@@ -2882,7 +2882,7 @@ if (document.readyState === 'loading') {
 
   if (market) {
     // 2. حقل البحث عن السوبرماركت
-    const marketInput = document.getElementById('supermarket');
+    const marketInput = document.getElementById('supermarkets');
 
     if (marketInput) {
       // 3. وضع القيمة في الحقل
