--- a/index.html
+++ b/index.html
@@ -2865,7 +2865,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script> <script>
 document.addEventListener("DOMContentLoaded", function () {
   const params = new URLSearchParams(window.location.search);
-  const percent = params.get("percent");
+  const percent = params.get("discount");
 
   if (!percent) return;
 
