--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@ function applyAllFilters() {
               }
               break;
             
-              case 'recent_day':
+              case 'recent_extended':
               // Logic: Check if item is within 1 days of the newest date in the dataset
               if (latestTwoDates.length === 0) {
                  chipFilterPass = false;
